# xfeat

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  context7.json  install.ps1  install.sh  mise.toml  rustfmt.toml
.agents/skills/xfeat/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  crates-release.yml  release.yml
docs/: mvp.md  release.md
docs/features/: add-command.md  extend-add-command.md  simplify-new-command.md
shell/: init.bash  init.zsh
src/: cli.rs  config.rs  error.rs  init.rs  main.rs  worktree.rs
src/commands/: add.rs  list.rs  mod.rs  new.rs  remove.rs  sync.rs
