[package]
name = "xfeat"
version = "0.3.1"
edition = "2024"
build = "build.rs"
description = "CLI utility for managing git worktrees across multiple repositories"
license-file = "LICENSE"
authors = ["Ilshat Sultanov <ilshat@sultanov.team>"]
repository = "https://github.com/just-sultanov/xfeat"
keywords = ["git", "worktree", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
thiserror = "2"
include_dir = "0.7"
